cosmetics: use final var